<resources>
    <string name="app_name">Homework2</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="freelance">Freelance</string>
    <string name="edit">Edit</string>
</resources>
